TRIPLEX-623 fix scrollbar

--- a/src/components/LightBox/LightBoxSideOverlay/styles/LightBoxSideOverlay.module.less
+++ b/src/components/LightBox/LightBoxSideOverlay/styles/LightBoxSideOverlay.module.less
@@ -110,28 +110,28 @@
 }
 
 // Миксин скролл-зависимых стилей.
-each(@scroll-sizes, {
-    @scroll-width: @value;
-    @scroll-width-px: ~'@{scroll-width}px';
-    // Ширина экрана без скрола.
-    @screen-width-without-scroll: calc(var(--lightBox-screen-width) - @scroll-width-px);
+// each(@scroll-sizes, {
+//     @scroll-width: @value;
+//     @scroll-width-px: ~'@{scroll-width}px';
+//     // Ширина экрана без скрола.
+//     @screen-width-without-scroll: calc(var(--lightBox-screen-width) - @scroll-width-px);
 
-    html.scroll-@{scroll-width} {
-        /*
-          Breakpoint для размера менее 1024px.
-        */
-        .LB-less-or-equal-media-point-0-no-hash {
-            .lightBoxSideOverlay {
-                left: 0;
-                width: 100%;
-            }
+//     html.scroll-@{scroll-width} {
+//         /*
+//           Breakpoint для размера менее 1024px.
+//         */
+//         .LB-less-or-equal-media-point-0-no-hash {
+//             .lightBoxSideOverlay {
+//                 left: 0;
+//                 width: 100%;
+//             }
 
-            .lightBoxSideOverlayWrapper.opened {
-                left: var(--lightBox-screen-left);
-                width: var(--lightBox-screen-width);
-                position: fixed;
-                right: auto;
-            }
-        }
-    }
-})
+//             .lightBoxSideOverlayWrapper.opened {
+//                 left: var(--lightBox-screen-left);
+//                 width: var(--lightBox-screen-width);
+//                 position: fixed;
+//                 right: auto;
+//             }
+//         }
+//     }
+// })
